<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wave.fitness.fragments.PedometerFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/waveBase"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <LinearLayout
            android:id="@+id/row_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/row_spacing">

            <LinearLayout
                android:id="@+id/box_steps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingRight="@dimen/margin">

                <TextView
                    android:id="@+id/step_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textSize="@dimen/value" />

                <TextView
                    android:id="@+id/step_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/steps"
                    android:textSize="@dimen/units" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distance_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textSize="@dimen/value" />

                <TextView
                    android:id="@+id/distance_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/kilometers"
                    android:textSize="@dimen/units" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/row_spacing">

            <LinearLayout
                android:id="@+id/box_pace"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="@dimen/margin">

                <TextView
                    android:id="@+id/pace_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textSize="@dimen/small_value" />

                <TextView
                    android:id="@+id/pace_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/steps_per_minute"
                    android:textSize="@dimen/units" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="@dimen/margin">

                <TextView
                    android:id="@+id/speed_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textSize="@dimen/small_value" />

                <TextView
                    android:id="@+id/speed_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/kilometers_per_hour"
                    android:textSize="@dimen/units" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_calories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/calories_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textSize="@dimen/small_value" />

                <TextView
                    android:id="@+id/calories_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/wavePrimary"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/calories_burned"
                    android:textSize="@dimen/units" />

            </LinearLayout>

        </LinearLayout>

        <!-- Desired pace/speed row -->
        <LinearLayout
            android:id="@+id/desired_pace_control"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/row_spacing">

            <!-- Button "-", for decrementing desired pace/speed -->
            <Button
                android:id="@+id/button_desired_pace_lower"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:text="-"
                android:textSize="@dimen/button_sign" />

            <!-- Container for desired pace/speed -->
            <LinearLayout
                android:layout_width="@dimen/desired_pace_width"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desired_pace_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/desired_pace" />

                <!-- Current desired pace/speed -->
                <TextView
                    android:id="@+id/desired_pace_value"
                    android:layout_width="@dimen/desired_pace_width"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/desired_pace" />

            </LinearLayout>

            <!-- Button "+", for incrementing desired pace/speed -->
            <Button
                android:id="@+id/button_desired_pace_raise"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:text="+"
                android:textSize="@dimen/button_sign" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
